tests/fsharp/core/sigs/neg32.bsl

neg32.fs(17,21): error FS0842: This attribute is not valid for use on this language element

neg32.fs(24,15): error FS0043: The member or object constructor 'TryParse' does not take 1 argument(s). An overload was found taking 2 arguments.
